--- a/dockerfile_amd
+++ b/dockerfile_amd
@@ -1,15 +1,13 @@
 FROM alpine:latest as certs
-RUN apk --update add ca-certificates && apk --no-cache add curl
-RUN curl -L https://github.com/open-telemetry/opentelemetry-collector-contrib/releases/download/v0.42.0/otelcontribcol_linux_amd64 -o otelcontribcol \
-&& chmod +x otelcontribcol
+RUN apk --update add ca-certificates
 
-FROM python:3.10-slim
+FROM python:3.7-slim
 COPY ./otel-config.yml /etc/otel/config.yaml
 RUN pip install pyyaml flask
 COPY ./config.py config.py
 COPY ./entrypoint.sh entrypoint.sh
 COPY --from=certs /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/ca-certificates.crt
-COPY --from=certs otelcontribcol /otelcontribcol
+COPY otelcontribcol_linux_amd64 /otelcontribcol
 EXPOSE 4317 55680 55679 8888 6060 7276 9411 9943 1234 6831 6832 14250 14268 4317 55681 8888
 RUN ["chmod", "+x", "/entrypoint.sh"]
 ENTRYPOINT ["/entrypoint.sh"]
