--- a/dockerfile.arm
+++ b/dockerfile.arm
@@ -1,6 +1,6 @@
 FROM alpine:latest as certs
 RUN apk --update add ca-certificates && apk --no-cache add curl
-RUN curl -L https://github.com/open-telemetry/opentelemetry-collector-releases/releases/download/v0.45.0/otelcol-contrib_0.45.0_linux_amd64.tar.gz -o otelcontribcol.tar.gz \
+RUN curl -L https://github.com/open-telemetry/opentelemetry-collector-releases/releases/download/v0.45.0/otelcol-contrib_0.45.0_linux_arm64.tar.gz -o otelcontribcol.tar.gz \
     && tar -xf otelcontribcol.tar.gz \
     && chmod +x otelcol-contrib
 FROM python:3.10-slim
@@ -13,4 +13,3 @@ COPY --from=certs otelcol-contrib /otelcontribcol
 EXPOSE 4317 55680 55679 8888 6060 7276 9411 9943 1234 6831 6832 14250 14268 4317 55681 8888
 RUN ["chmod", "+x", "/entrypoint.sh"]
 ENTRYPOINT ["/entrypoint.sh"]
-
