Update otel + debug logs + workflows + change legacy otlp http -> 4318

--- a/otel-config.yml
+++ b/otel-config.yml
@@ -16,7 +16,7 @@ receivers:
       grpc:
         endpoint: "0.0.0.0:4317"
       http:
-        endpoint: "0.0.0.0:55681"
+        endpoint: "0.0.0.0:4318"
   zipkin:
     endpoint: "0.0.0.0:9411"
 
@@ -44,5 +44,8 @@ service:
       receivers: [opencensus, jaeger, zipkin, otlp]
       processors: [batch]
       exporters: [logging, logzio]
+  telemetry:
+    logs:
+      level: "debug"
 
 
